--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ theme = "even"
 preserveTaxonomyNames = true
 hasCJKLanguage = true     # has chinese/japanese/korean ? # 自动检测是否包含 中文\日文\韩文
 paginate = 5                                              # 首页每页显示的文章数
-disqusShortname = "VietHQ"      # disqus_shortname
+disqusShortname = "gg4acrossover"      # disqus_shortname
 copyright = ""            # default: author.name ↓        # 默认为下面配置的author.name ↓
 
 [author]                  # essential                     # 必需
