--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,12 @@ enableRobotsTXT = true
 enableEmoji = true
 theme = "even"
 
+# Syntax highlighting by Chroma. NOTE: Don't enable `highlightInClient` and `chroma` at the same time!
+pygmentsOptions = "linenos=table"
+pygmentsCodefences = true
+pygmentsUseClasses = true
+pygmentsCodefencesGuessSyntax = true
+
 preserveTaxonomyNames = true
 hasCJKLanguage = true     # has chinese/japanese/korean ? # 自动检测是否包含 中文\日文\韩文
 paginate = 5                                              # 首页每页显示的文章数
@@ -45,7 +51,7 @@ googleAnalytics = "UA-99127158-1"
   url = "http://gg4acrossover.github.io/"
 
 [params]
-  version = "3.x"           # Used to give a friendly message when you have an incompatible update
+  version = "4.x"           # Used to give a friendly message when you have an incompatible update
   debug = false             # If true, load `eruda.min.js`. See https://github.com/liriliri/eruda
 
   since = "2017"            # Site creation time          # 站点建立时间
@@ -66,6 +72,9 @@ googleAnalytics = "UA-99127158-1"
 
   # show word count and read time ?                       # 是否显示字数统计与阅读时间
   moreMeta = false
+
+  # Syntax highlighting by highlight.js
+  highlightInClient = false
 
   # 一些全局开关，你也可以在每一篇内容的 front matter 中针对单篇内容关闭或开启某些功能，在 archetypes/default.md 查看更多信息。
   # Some global options, you can also close or open something in front matter for a single post, see more information from `archetypes/default.md`.
